# crab8

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  README.md
assets/sprites/: crab8-startup.ch8s
crates/bevy_chip8/: Cargo.toml
crates/bevy_chip8/src/: main.rs  screen.rs
crates/crab8_asm/: Cargo.toml
crates/crab8_asm/src/: lexer.rs  parser.rs  token.rs
crates/crab8_bevy_frontend/: Cargo.toml
crates/crab8_bevy_frontend/scripts/: build-wasm.sh
crates/crab8_bevy_frontend/src/: main.rs  ui.rs
crates/crab8_bevy_frontend/wasm/: index.html
crates/crab8_frontend/: Cargo.toml
crates/crab8_frontend/scripts/: build-wasm.sh
crates/crab8_frontend/src/: app.rs  gui.rs  gui_renderer.rs  input.rs  lib.rs  main.rs  screen.rs  style.rs  wasm.rs  window.rs
crates/crab8_frontend/src/gui/: about.rs  download.rs  images.rs  memory.rs  mod.rs  playback.rs  registers.rs  renderer.rs  stack.rs
crates/crab8_frontend/wasm/: index.html
src/: character.rs  chip8.rs  color.rs  conditions.rs  database.rs  input.rs  instructions.rs  lib.rs  main.rs  memory.rs  quirks.rs  registers.rs  screen.rs  stack.rs  timer.rs
src/instructions/: bitwise.rs  conditional.rs  input.rs  jump.rs  math.rs  memory.rs  mod.rs  random.rs  registers.rs  screen.rs  timers.rs
tests/: timendus.rs
tests/expected/: 1-chip8-logo.ch8s  2-ibm-logo.ch8s  3-corax+.ch8s  4-flags.ch8s  5-quirks.ch8s
