[package]
name = "crab8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true, optional = true }
getrandom = { workspace = true, features = ["js"] }
rand = { workspace = true }
reqwest = { workspace = true, optional = true, features = ["blocking"] }

[features]
bevy = ["dep:bevy"]
download = ["dep:reqwest"]

[workspace]
members = ["crates/crab8_bevy_frontend"]

[workspace.dependencies]
bevy = "^0.10"
bevy_mod_reqwest = "^0.10.4"
getrandom = "^0.2.9"
rand = "^0.8"
reqwest = "^0.11.16"
