[package]
name = "crab8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true, optional = true }
getrandom = { workspace = true, features = ["js"] }
rand = { workspace = true }
reqwest = { workspace = true, optional = true, features = ["blocking"] }

[features]
bevy = ["dep:bevy"]
download = ["dep:reqwest"]

[workspace]
members = ["crates/*"]

[workspace.dependencies]
bevy = "^0.10"
bevy_mod_reqwest = "^0.10.4"
chrono = "^0.4.24"
console_error_panic_hook = "^0.1.7"
console_log = "^1.0.0"
# eframe = "^0.21.3"
egui = "^0.21.0"
egui-wgpu = "^0.21.0"
egui-winit = { version = "^0.21.1", default-features = false }
getrandom = "^0.2.9"
instant = "^0.1.12"
log = "^0.4.17"
pixels = "^0.12.1"
pollster = "^0.3.0"
rand = "^0.8"
reqwest = "^0.11.16"
tracing-subscriber = "^0.3.17"
tracing-wasm = "^0.2.1"
wasm-bindgen = "^0.2.84"
wasm-bindgen-futures = "^0.4.34"
web-sys = "^0.3.61"
winit = "^0.28.3"
winit_input_helper = "^0.14.1"
