[package]
name = "crab8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chip8_db = { workspace = true, features = ["extra-data"] }
getrandom = { workspace = true, features = ["js"] }
itertools = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }

[workspace]
members = ["crates/*"]

[workspace.dependencies]
anyhow = "^1.0.71"
chip8_db = "^2.1.0"
chrono = "^0.4.24"
console_error_panic_hook = "^0.1.7"
console_log = "^1.0.0"
crab8 = { path = "./" }
# eframe = "^0.21.3"
egui = "^0.21.0"
egui-wgpu = "^0.21.0"
egui-winit = { version = "^0.21.1", default-features = false }
ehttp = "^0.2.0"
env_logger = "0.10.0"
getrandom = "^0.2.9"
image = { version = "0.24.6", default-features = false }
instant = "^0.1.12"
itertools = "0.11.0"
log = "^0.4.17"
logos = "^0.13.0"
pixels = "^0.12.1"
pollster = "^0.3.0"
rand = "^0.8"
regex = "^1.8.4"
rfd = "^0.11.3"
thiserror = "^1.0.40"
tokio = "^1.28.0"
tracing-subscriber = "^0.3.17"
tracing-wasm = "^0.2.1"
wasm-bindgen = "=0.2.87"
wasm-bindgen-futures = "^0.4.34"
web-sys = "^0.3.61"
winit = "^0.28.3"
winit_input_helper = "^0.14.1"
