[package]
name = "crab8_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { workspace = true, default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
] }
egui = { workspace = true }
pixels = { workspace = true }

# Use tracing subscriber on everything but WASM
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = { workspace = true }

# WASM only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { workspace = true }
tracing-wasm = { workspace = true }
wasm-bindgen-futures = { workspace = true }

# Optimize releases
[profile.release]
opt-level = 3

# Optimize dependencies in development builds
[profile.dev.package."*"]
opt-level = 3
