[package]
name = "crab8_frontend"
version = "0.1.0"
edition = "2021"

[lib]
path = "./src/lib.rs"

[[bin]]
path = "./src/main.rs"
name = "crab8_frontend"

[dependencies]
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
crab8 = { path = "../../" }
egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }
log = { workspace = true }
pixels = { workspace = true }
pollster = { workspace = true }
winit = { workspace = true }
winit_input_helper = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["console"] }
