[package]
name = "crab8_frontend"
version = "0.1.0"
edition = "2021"

[lib]
path = "./src/lib.rs"

[[bin]]
path = "./src/main.rs"
name = "crab8_frontend"

[dependencies]
chrono = { workspace = true }
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
crab8 = { workspace = true }
egui = { workspace = true }
egui-wgpu = { workspace = true }
ehttp = { workspace = true }
env_logger = { workspace = true }
image = { workspace = true, features = ["png"] }
instant = { workspace = true }
log = { workspace = true }
pixels = { workspace = true }
pollster = { workspace = true }
rfd = { workspace = true }
winit = { workspace = true }
winit_input_helper = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["console"] }

[target.'cfg(target_arch="wasm32")'.dependencies]
chrono = { workspace = true, features = ["wasmbind"] }
egui-winit = { workspace = true, features = ["links"] }
instant = { workspace = true, features = ["wasm-bindgen"] }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
egui-winit = { workspace = true, features = ["clipboard", "links", "wayland"] }
tokio = { workspace = true, features = ["full"] }
